src/slave/flags.hpp
@@ -76,6 +76,7 @@ public:
   Option<JSON::Object> executor_environment_variables;
   Duration executor_registration_timeout;
   Duration executor_reregistration_timeout;
+  Option<Duration> executor_reregistration_retry_interval;
   Duration executor_shutdown_grace_period;
   Duration gc_delay;
   double gc_disk_headroom;
